--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -53,6 +53,10 @@
 	"remoteUser": "vscode",
 	"features": {
 		"sshd": "latest",
-		"desktop-lite": "latest"
+		"desktop-lite": {
+			"password": "vscode",
+			"webPort": "6080",
+			"vncPort": "5901"
+		}
 	}
 }
